# bevy-castle-fight

./: Cargo.toml  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md  task---art.md  task---design.md  task---programming.md
.github/workflows/: build-and-test.yml  release.yml
art/aseprite/: human-b-archery-range.aseprite  human-b-barracks.aseprite  human-u-archer.aseprite  human-u-spearman.aseprite
assets/: factions.md
assets/factions/: humans.faction.json
assets/maps/: map-0.ldtk
assets/shaders/: team_colour.wgsl
assets/ui/fonts/warioland4tt/: info.txt
src/: attack.rs  building_plugin.rs  building_spawning.rs  buildings.rs  camera.rs  camera_plugin.rs  castle_fight_ldtk.rs  common_components.rs  grid_traits.rs  health.rs  inspector_plugin.rs  lib.rs  load_factions.rs  main.rs  movement.rs  resources.rs  systems.rs  teams.rs  unit_plugin.rs  unit_spawning.rs  units.rs  vision.rs  waypoint_plugin.rs  waypoints.rs
src/game/: attack.rs  building_spawning.rs  buildings.rs  castle_fight_ldtk.rs  grid_traits.rs  health.rs  mod.rs  movement.rs  spawning.rs  systems.rs  teams.rs  ui.rs  unit_spawning.rs  units.rs  vision.rs  waypoints.rs
src/load_game/: load_factions.rs  mod.rs
src/main_menu/: init_screen.rs  mod.rs
